--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.1/css/bootstrap.min.css' integrity='sha512-siwe/oXMhSjGCwLn+scraPOWrJxHlUgMBMZXdPe2Tnk3I0x3ESCoLz7WZ5NTH6SZrywMY+PB1cjyqJ5jAluCOg==' crossorigin='anonymous'/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Boostrap Freelancer</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="row justify-content-center">
+            <div class="col-6 col-md-5 col-lg-4 _debug text-center">
+                <h1 class="_debugobj">LOGO</h1>
+            </div>
+            <div class="col-6 col-md-5 col-lg-4 _debug">MENUH</div>
+        </div>
+    </header>
+    <div class="jumbotron">J</div>
+    <main>M</main>
+    <footer>F</footer>
 </body>
 </html>
