--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <div class="row justify-content-center">
-            <div class="col-6 col-md-5 col-lg-4 _debug text-center">
+            <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center">
                 <h1 class="_debugobj">LOGO</h1>
             </div>
-            <div class="col-6 col-md-5 col-lg-4 _debug">MENUH</div>
+            <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center justify-content-end">MENUH</div>
         </div>
     </header>
     <div class="jumbotron">J</div>
