--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center justify-content-end">MENUH</div>
         </div>
     </header>
-    <div class="jumbotron">J</div>
+
+    <div class="jumbotron">
+        <div class="row justify-content-center">
+            <div class="col d-flex justify-content-center align-items-center _jumbo">
+                JUMBOTRON
+            </div>
+        </div>
+    </div>
     <main>M</main>
     <footer>F</footer>
 </body>
