--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
             </div>
         </div>
     </div>
-    <main>M</main>
+
+    <main>
+
+        <h1 class="_debugobj">PORTFOLIO</h1>
+        <!-- portfolio -->
+        <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3">
+
+            <div class="col _debug">1</div>
+            <div class="col _debug">2</div>
+            <div class="col _debug">3</div>
+            <div class="col _debug">4</div>
+            <div class="col _debug">5</div>
+            <div class="col _debug">6</div>
+
+        </div>
+    </main>
     <footer>F</footer>
 </body>
 </html>
