--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center">
                 <h1 class="_debugobj">LOGO</h1>
             </div>
-            <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center justify-content-end">MENUH</div>
+            <div class="col d-md-none _debug text-center d-flex align-items-center justify-content-end">menusmall</div>
+            <div class="col d-none _debug text-center d-md-flex align-items-center justify-content-end">MENUBIG</div>
         </div>
     </header>
 
@@ -29,18 +30,21 @@
 
     <main>
 
-        <h1 class="_debugobj">PORTFOLIO</h1>
+        <h2 class="_debugobj">PORTFOLIO</h2>
         <!-- portfolio -->
-        <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3">
+        <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3 _portfolio">
 
-            <div class="col _debug">1</div>
-            <div class="col _debug">2</div>
-            <div class="col _debug">3</div>
-            <div class="col _debug">4</div>
-            <div class="col _debug">5</div>
-            <div class="col _debug">6</div>
+            <div class="col _card mt-1 mb-1">1</div>
+            <div class="col _card mt-1 mb-1">2</div>
+            <div class="col _card mt-1 mb-1">3</div>
+            <div class="col _card mt-1 mb-1">4</div>
+            <div class="col _card mt-1 mb-1">5</div>
+            <div class="col _card mt-1 mb-1">6</div>
 
         </div>
+
+        <!-- aboutus -->
+
     </main>
     <footer>F</footer>
 </body>
