--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <main>
 
         <h2 class="_debugobj">PORTFOLIO</h2>
+
         <!-- portfolio -->
         <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3 _portfolio">
 
@@ -44,6 +45,15 @@
         </div>
 
         <!-- aboutus -->
+
+        <h2>ABOUT</h2>
+
+        <div class="row row-cols-1 row-cols-md-2 justify-content-center _debug">
+            <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facere porro officiis aliquam reprehenderit mollitia aut magni possimus nobis.</div>
+            <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquam. Aspernatur eum beatae quia, laboriosam fuga at provident maxime neque?</div>
+        </div>
+
+        <p>DOWNLOAD</p>
 
     </main>
     <footer>F</footer>
