add-main-and-footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,28 @@
 
         <p>DOWNLOAD</p>
 
+        <!-- contactme -->
+
+        <div class="row row-cols-1 justify-content-center _debug _info">
+            <h2>CONTACT ME</h2>
+            <div class="col _debugobj">
+                INFO
+            </div>
+        </div>
+
+        <!-- location-->
+
+        <div class="row row-cols-1 row-cols-md-3 justify-content-center _debug">
+            <div class="col text-center">1</div>
+            <div class="col text-center">2</div>
+            <div class="col text-center">3</div>
+        </div>
+
     </main>
-    <footer>F</footer>
+
+    <!-- copyright -->
+    <footer>
+        <h3>COPYRIGHT</h3>
+    </footer>
 </body>
 </html>
