--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
 <body>
     <header>
-        <div class="row justify-content-center">
-            <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center">
-                <h1 class="_debugobj">LOGO</h1>
+      <div class="container">
+            <div class="row">
+                <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center">
+                    <h1 class="_debugobj">LOGO</h1>
+                </div>
+                <div class="col d-md-none _debug text-center d-flex align-items-center justify-content-end">menusmall</div>
+                <div class="col d-none _debug text-center d-md-flex align-items-center justify-content-end">MENUBIG</div>
             </div>
-            <div class="col d-md-none _debug text-center d-flex align-items-center justify-content-end">menusmall</div>
-            <div class="col d-none _debug text-center d-md-flex align-items-center justify-content-end">MENUBIG</div>
-        </div>
+     </div>
     </header>
 
     <div class="jumbotron">
-        <div class="row justify-content-center">
-            <div class="col d-flex justify-content-center align-items-center _jumbo">
-                JUMBOTRON
-            </div>
-        </div>
+        <div class="container">
+             <div class="row justify-content-center">
+                 <div class="col d-flex justify-content-center align-items-center _jumbo">
+                    JUMBOTRON
+                 </div>
+             </div>
+       </div>
     </div>
 
     <main>
@@ -33,44 +37,49 @@
         <h2 class="_debugobj">PORTFOLIO</h2>
 
         <!-- portfolio -->
-        <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3 _portfolio">
+        <div class="container">
+            <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3 _portfolio">
 
-            <div class="col _card mt-1 mb-1">1</div>
-            <div class="col _card mt-1 mb-1">2</div>
-            <div class="col _card mt-1 mb-1">3</div>
-            <div class="col _card mt-1 mb-1">4</div>
-            <div class="col _card mt-1 mb-1">5</div>
-            <div class="col _card mt-1 mb-1">6</div>
+                <div class="col _card mt-1 mb-1">1</div>
+                <div class="col _card mt-1 mb-1">2</div>
+                <div class="col _card mt-1 mb-1">3</div>
+                <div class="col _card mt-1 mb-1">4</div>
+                <div class="col _card mt-1 mb-1">5</div>
+                <div class="col _card mt-1 mb-1">6</div>
 
-        </div>
+            </div>
+      </div>
 
         <!-- aboutus -->
 
         <h2>ABOUT</h2>
-
-        <div class="row row-cols-1 row-cols-md-2 justify-content-center _debug">
-            <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facere porro officiis aliquam reprehenderit mollitia aut magni possimus nobis.</div>
-            <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquam. Aspernatur eum beatae quia, laboriosam fuga at provident maxime neque?</div>
-        </div>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 justify-content-center _debug">
+                <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facere porro officiis aliquam reprehenderit mollitia aut magni possimus nobis.</div>
+                <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquam. Aspernatur eum beatae quia, laboriosam fuga at provident maxime neque?</div>
+            </div>
+      </div>
 
         <p>DOWNLOAD</p>
 
         <!-- contactme -->
-
-        <div class="row row-cols-1 justify-content-center _debug _info">
-            <h2>CONTACT ME</h2>
-            <div class="col _debugobj">
-                INFO
+        <div class="container">
+            <div class="row row-cols-1 justify-content-center _debug _info">
+                <h2>CONTACT ME</h2>
+                <div class="col _debugobj">
+                    INFO
+                </div>
             </div>
         </div>
 
         <!-- location-->
-
-        <div class="row row-cols-1 row-cols-md-3 justify-content-center _debug">
-            <div class="col text-center">1</div>
-            <div class="col text-center">2</div>
-            <div class="col text-center">3</div>
-        </div>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 justify-content-center _debug">
+                <div class="col text-center">1</div>
+                <div class="col text-center">2</div>
+                <div class="col text-center">3</div>
+            </div>
+     </div>
 
     </main>
 
