--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Boostrap Freelancer</title>
 </head>
 
 <body>
-    <header>
-      <div class="container">
-            <div class="row">
-                <div class="col col-md-5 col-lg-4 _debug text-center d-flex align-items-center">
-                    <h1 class="_debugobj">LOGO</h1>
-                </div>
-                <div class="col d-md-none _debug text-center d-flex align-items-center justify-content-end">menusmall</div>
-                <div class="col d-none _debug text-center d-md-flex align-items-center justify-content-end">MENUBIG</div>
+
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <div class="col">
+                <a class="navbar-brand title text-white" href="#">START BOOTSTRAP</a>
             </div>
-     </div>
-    </header>
+            <div class="col ms-auto">
+                <button class="navbar-toggler btn-close-white" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold btn-close-white">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">CONTACT</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </nav>
 
     <div class="jumbotron">
         <div class="container">
