--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-md">
         <div class="container">
             <div class="col">
                 <a class="navbar-brand title text-white" href="#">START BOOTSTRAP</a>
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold btn-close-white">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bold btn-close-white">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
                     </li>
@@ -39,11 +39,14 @@
       </nav>
 
     <div class="jumbotron">
-        <div class="container">
-             <div class="row justify-content-center">
-                 <div class="col d-flex justify-content-center align-items-center _jumbo">
-                    JUMBOTRON
+        <div class="container-fluid">
+             <div class="row">
+                 <div class="col d-flex justify-content-center mt-3 mb-1">
+                    <img src="img/avatar.svg" alt="avatar">
                  </div>
+             </div>
+             <div class="col d-flex justify-content-center mt-3">
+                <h1>START BOOTSTRAP</h1>
              </div>
        </div>
     </div>
