--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <nav class="navbar navbar-expand-md">
         <div class="container">
-            <div class="col">
                 <a class="navbar-brand title text-white" href="#">START BOOTSTRAP</a>
-            </div>
-            <div class="col ms-auto">
                 <button class="navbar-toggler btn-close-white" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +31,6 @@
                     </li>
                     </ul>
                 </div>
-            </div>
         </div>
       </nav>
 
@@ -45,9 +41,17 @@
                     <img src="img/avatar.svg" alt="avatar">
                  </div>
              </div>
+
              <div class="col d-flex justify-content-center mt-3">
                 <h1>START BOOTSTRAP</h1>
              </div>
+
+             <div class="col d-flex justify-content-center p-3">
+                <div class="line"></div>
+                <i class="bi bi-star-fill"></i>
+                <div class="line"></div>
+             </div>
+
        </div>
     </div>
 
