--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Boostrap Freelancer</title>
 </head>
 
@@ -46,10 +47,14 @@
                 <h1>START BOOTSTRAP</h1>
              </div>
 
-             <div class="col d-flex justify-content-center p-3">
-                <div class="line"></div>
+             <div class="col d-flex justify-content-center align-items-center p-3">
+                <div class="line me-2"></div>
                 <i class="bi bi-star-fill"></i>
-                <div class="line"></div>
+                <div class="line ms-2"></div>
+             </div>
+
+             <div class="col d-flex justify-content-center align-items-center p-3 text-white">
+                <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
              </div>
 
        </div>
