--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="_portfolio">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col d-flex justify-content-center mt-1">
+                    <div class="col d-flex justify-content-center mt-2">
                         <h2>PORTFOLIO</h2>
                     </div>
                 </div>
@@ -118,14 +118,37 @@
         </div>
 
         <!-- aboutus -->
+        
+        <div class="about-us">
+            <div class="container p-3">
+                <div class="row">
 
-        <h2>ABOUT</h2>
-        <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 justify-content-center _debug">
-                <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facere porro officiis aliquam reprehenderit mollitia aut magni possimus nobis.</div>
-                <div class="col _debugobj">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquam. Aspernatur eum beatae quia, laboriosam fuga at provident maxime neque?</div>
+                    <div class="col text-center">
+                        <h2>ABOUT</h2>
+                    </div>
+
+                    <div class="row">
+                        <div class="col d-flex justify-content-center align-items-center p-1 mb-3">
+                            <div class="line me-2"></div>
+                            <i class="bi bi-star-fill"></i>
+                            <div class="line ms-2"></div>
+                        </div>
+                    </div>
+
+                 </div>
+
+                <div class="row row-cols-1 row-cols-md-2 justify-content-center">
+
+                    <div class="col text-white mb-3 box_text">
+                        <p> Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization</p>
+                    </div>
+
+                    <div class="col text-white box_text">
+                        <p> Whatever you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking toi share your projects, this template is the perfet starting point! </p>
+                    </div>
+                </div>
             </div>
-      </div>
+        </div>
 
         <p>DOWNLOAD</p>
 
