--- a/index.html
+++ b/index.html
@@ -139,18 +139,24 @@
 
                 <div class="row row-cols-1 row-cols-md-2 justify-content-center">
 
-                    <div class="col text-white mb-3 box_text">
-                        <p> Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization</p>
+                    <div class="col text-white mb-3">
+                        <div class="box_text">
+                         <p> Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization</p>
+                        </div>
                     </div>
 
-                    <div class="col text-white box_text">
-                        <p> Whatever you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking toi share your projects, this template is the perfet starting point! </p>
+                    <div class="col text-white">
+                        <div class="box_text">
+                         <p> Whatever you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking toi share your projects, this template is the perfet starting point! </p>
+                        </div>
+                    </div>
+
+                    <div class="col text-center mt-5">
+                        <button> <i class="bi bi-download"></i> DOWNLOAD</button>
                     </div>
                 </div>
             </div>
         </div>
-
-        <p>DOWNLOAD</p>
 
         <!-- contactme -->
         <div class="container">
