--- a/index.html
+++ b/index.html
@@ -159,11 +159,43 @@
         </div>
 
         <!-- contactme -->
-        <div class="container">
-            <div class="row row-cols-1 justify-content-center _debug _info">
-                <h2>CONTACT ME</h2>
-                <div class="col _debugobj">
-                    INFO
+        <div class="contact">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col text-center">
+                        <h2>CONTACT ME</h2>
+                    </div>
+
+                    <div class="row">
+                        <div class="col d-flex justify-content-center align-items-center p-1 mb-3">
+                            <div class="line me-2"></div>
+                            <i class="bi bi-star-fill"></i>
+                            <div class="line ms-2"></div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="my_form">
+
+                            <div class="mb-3">
+                                <input type="email" class="form-control border_form" id="exampleFormControlInput1" placeholder="Name">
+                            </div>
+
+                            <div class="mb-3">
+                                <input type="email" class="form-control border_form" id="exampleFormControlInput1" placeholder="Email Address">
+                            </div>
+
+                            <div class="mb-3">
+                                <input type="email" class="form-control border_form" id="exampleFormControlInput1" placeholder="Phone Number">
+                            </div>
+
+                            <div class="mb-3">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                            </div>
+                            </div>
+                        </div>
+
                 </div>
             </div>
         </div>
