--- a/index.html
+++ b/index.html
@@ -201,19 +201,42 @@
         </div>
 
         <!-- location-->
-        <div class="container">
-            <div class="row row-cols-1 row-cols-md-3 justify-content-center _debug">
-                <div class="col text-center">1</div>
-                <div class="col text-center">2</div>
-                <div class="col text-center">3</div>
+
+        <div class="location">
+            <div class="container p-4">
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col text-center mb-2 text-white">
+                        <p>LOCATION</p>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="col text-center text-white pb-3">
+                        <p>AROUND THE WEB</p>
+                        <div>
+                            <i class="bi bi-facebook"></i>
+                            <i class="bi bi-google"></i>
+                            <i class="bi bi-twitter"></i>
+                            <i class="bi bi-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="col text-center text-white">
+                        <p>ABOUT FREELANCER</p>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="">Start Bootstrap</a></p>
+                    </div>
+                </div>
             </div>
-     </div>
+        </div>
 
     </main>
 
     <!-- copyright -->
     <footer>
-        <h3>COPYRIGHT</h3>
+        <div class="container">
+            <div class="row p-4">
+                <div class="col text-center fs-6 text-white">
+                    <p>Copyright <i class="bi bi-circle"></i> Your Website 2022</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
