add-hover-cards

--- a/index.html
+++ b/index.html
@@ -89,28 +89,34 @@
             <div class="container">
                 <div class="row justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-3 _portfolio">
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/cabin.png" alt="cabin">
+                        <p>+</p>
                     </div>
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/cake.png" alt="cake">
+                        <p>+</p>
                     </div>
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/circus.png" alt="circus">
+                        <p>+</p>
                     </div>
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/game.png" alt="game">
+                        <p>+</p>
                     </div>
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/safe.png" alt="safe">
+                        <p>+</p>
                     </div>
 
-                    <div class="col mt-1 mb-1">
+                    <div class="col mt-1 mb-1 _add">
                         <img src="img/submarine.png" alt="submarine">
+                        <p>+</p>
                     </div>
 
                 </div>
@@ -191,7 +197,7 @@
                             </div>
 
                             <div class="mb-3">
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                                <textarea class="form-control border_form" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                             </div>
                             </div>
                         </div>
